start label overflow bugfix

--- a/css/size628.css
+++ b/css/size628.css
@@ -68,7 +68,6 @@ h3{
 
 .start{
     width: 280px;
-    height: 320px;
     left: calc(50% - 140px);
     top: calc(50% - 160px)
 }
